@@ -1,3 +1,4 @@
+- Refactor: PersonServices not extending academic-extensions service anymore [#qubIT-Fenix-4784]
 - Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]
 
 7.4.0 (09-10-2023)
